# cheddar_framework

./: AGENTS.md  README.md  cheddar_blueprint_v1_part1.md  cheddar_blueprint_v1_part2.md  cheddar_blueprint_v1_part3.md  cheddar_blueprint_v1_part4.md  cheddar_blueprint_v1_part7b.md  ground_truth_audit.yaml  pyproject.toml
ai_audit/: README.md
artifacts/: README.md
deprecated/: cheddar_blueprint_v1_part6.md  cheddar_blueprint_v1_part7.md  cheddar_blueprint_v1_part7a.md
docs/: NEXT_STEPS.md  ai-integration.md  alignment-fabric.md  artifact-hierarchy.md  documentation-governance.md  domain-model.md  embodiment.md  governance-ethics.md  intent-graphs.md  invariants.md  overview.md  personal-artifacts.md  phase5-naming-review.md
docs/adr/: ADR-001-hierarchy-is-canonical.md  README.md
examples/: README.md
governance/: README.md
lint/: README.md  compute_hash.py  run_all.py  validate_artifact.py  verify_lineage.py
roles/: README.md
schemas/: README.md  automation_brief.schema.json  cheddar_track.schema.json  common.schema.json  documentation_log.schema.json  flow_initiative.schema.json  mission_definition.schema.json  personal_artifact.schema.json
schemas/examples/: automation_brief.example.yaml  cheddar_track.example.yaml  documentation_log.example.yaml  flow_initiative.example.yaml  mission_definition.example.yaml  personal_artifact.example.yaml
src/cheddar/: README.md
tests/: README.md
